# NpyCpp

./: .gitignore  .gitmodules  CMakeLists.txt  Npy++.sln  Npy++.vcxproj  Npy++.vcxproj.filters  README.md
.github/workflows/: ci.yml  coverage.yml
MemoryMapping/: MemoryMapEnumerators.h  MemoryMappedFile.cpp  MemoryMappedFile.h  MemoryMappedFile.tpp  MemoryMapping.vcxproj  MemoryMapping.vcxproj.filters
Npy++/: CMakeLists.txt  Enumerators.h  Npy++.cpp  Npy++.h  Npy++.sln  Npy++.tpp  Npy++.vcxproj  Npy++.vcxproj.filters  StringUtilities.h  cnpy.cpp  cnpy.h  dummy.cpp
UnitTests/: 0123.npz  CMakeLists.txt  MmapNpyUnitTests.cpp  NpyUnitTests.cpp  NpzUnitTests.cpp  UnitTests.vcxproj  cnpyUnitTests.cpp  main.cpp  test.cpp
cnpy/: CMakeLists.txt  cnpy.cpp  cnpy.h
zlib-1.2.7.f-win64-v1/: zlib.ncb  zlib.sln  zlib.vcxproj  zlib.vcxproj.filters
